--- a/dropin-light.css
+++ b/dropin-light.css
@@ -3942,3 +3942,8 @@ textarea {
     transform: rotate(1turn);
     filter: invert(1)
 }
+
+.musicVoteList[data-v-603352d8] {
+    width: 700px;
+    margin-bottom: 20px;
+}
