Fix width of `hotEventCity`

--- a/dropin-light.css
+++ b/dropin-light.css
@@ -1680,7 +1680,8 @@ html {
     margin-top: 9px;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    width: 94px
 }
 
 .hotEventItem:hover {
