--- a/dropin-light.css
+++ b/dropin-light.css
@@ -51,6 +51,10 @@ input:-internal-autofill-selected {
     z-index: 100
 }
 
+#logo {
+    content: url("https://creator.hearinmusic.com/static/img/top_logo.c99a9d2a.png")
+}
+
 .imgCut {
     width: 100%;
     height: 100%;
@@ -74,9 +78,9 @@ input:-internal-autofill-selected {
 .search {
     width: 300px;
     opacity: 1;
-    background: #333;
+    background: #ccc;
     border-radius: 18px;
-    border: 0px solid #555;
+    border: 0px solid #ccc;
     margin-left: 17px;
     font-size: 400
 }
@@ -110,7 +114,7 @@ input:-internal-autofill-selected {
 .searchInput {
     margin-left: 15px;
     display: flex;
-    color: #545454;
+    color: #000;
     font-size: 14px;
     align-items: center;
     border: none;
@@ -136,7 +140,7 @@ input:-internal-autofill-selected {
 .headOption {
     margin-left: 33px;
     cursor: pointer;
-    color: #FFF
+    color: #000
 }
 
 .headOption.downloadOption {
@@ -360,7 +364,7 @@ input:-internal-autofill-selected {
 .headSticky {
     width: 100%;
     min-width: 1200px;
-    background-color: #131313;
+    background-color: #ffffff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .25);
     position: fixed;
     top: 0;
