Fix news text color

--- a/dropin-light.css
+++ b/dropin-light.css
@@ -152,3 +152,15 @@ html[data-theme="light"] .el-radio {
 html[data-theme="light"] .setPwDialog .el-input .el-input__inner {
     color: var(--font-color)
 }
+
+html[data-theme="light"] .rightItem.halfBottom.news:hover .infoItemText.textOverflow {
+ color:#7023e5
+}
+
+html[data-theme="light"] .rightItem.halfBottom.news:first-child .infoItemText.textOverflow {
+ color:#7023e5
+}
+
+html[data-theme="light"] .rightItem.halfBottom.news:hover .infoItemText.textOverflow {
+ color:#7023e5!important
+}
